# reelforge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start-claude.bat  test_database_issue.py  test_debug.py  test_shot_basic.py  test_shot_debug.py  test_task_basic.py  test_task_final.py
.claude/: settings.local.json
__tests__/: test_character.py  test_database.py  test_deepseek_client.py  test_parser.py  test_project.py  test_queue_manager.py  test_tongyi_client.py  test_tts_client.py  test_video_renderer.py
docs/: README.md  document-consolidation-plan.md
docs/01-convergence/: project-ready-for-development.md
docs/01-requirements/: PRD-v1.0.locked.md
docs/02-architecture/: database-schema-simple.sql  database-schema.sql  dependency-graph.md  module-design.md  tech-stack-decision.md
docs/02-architecture/interface-definitions/: api_quotas-interface.py  database-interface.v1.locked.py  deepseek_client-interface.py  parser-interface.py  parser-interface.v1.locked.py  queue_manager-interface.py  queue_manager-interface.v1.locked.py  render_configs-interface.py  script_lines-interface.py  shots-interface.py  system_config-interface.py  tasks-interface.py  tasks-interface.v1.locked.py  tongyi_client-interface.v1.locked.py  (+3 more)
docs/03-design/: ui-spec.md
docs/04-development/: decisions.md  session-log.md
docs/06-specifications/: auto-save-rules.md  coding-standards.md  document-protocol.md  phase-checkpoints.md
docs/06-validation/: code-exploration-report.md  sync-mechanism-test.md
docs/07-references/: project-config.yaml
src/reelforge/: __init__.py
(+39 files in other folders)
