[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reelforge"
version = "0.1.0"
description = "本地化AI短剧生产工具"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.1.0",
    "moviepy==1.0.3",
    "persist-queue>=0.8.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "ffmpeg-python>=0.2.0",
    "librosa==0.10.1",
    "Pillow==10.1.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true